# Apeiron

Apeiron/apeiron/: Apeiron_source_files.txt  CONTRIBUTING.md  README.md  __init__.py  apeiron_cifar10_log.txt  apeiron_cifar10_table.tex  conda_environment.yml  config.yaml  dirtree.ps  map.py  profile_cluster1_full.py  pyproject.toml  pytest.ini  requirements.txt  run_all_experiments.py
Apeiron/apeiron/benchmark/: layer02_benchmarks.py
Apeiron/apeiron/core/: __init__.py  adaptive_thresholds.py  base.py  chaos_detection.py  dependencies.py  document_tracker.py  event_bus.py  thermodynamic_cost.py  thermodynamic_ethics.py
Apeiron/apeiron/docs/: NEXUS_README.md  nexus_ultimate_v17.txt
Apeiron/apeiron/examples/: coherence_engine_demo.py  dashboard.py  launcher.py  nexus_v13.py
Apeiron/apeiron/experiment/: case_study_cifar10.py  nmi_results.txt  run_all_experiments.py
Apeiron/apeiron/hardware/: README.md  __init__.py  config.py  decorators.py  exceptions.py  factory.py
Apeiron/apeiron/infrastructure/: database.py
Apeiron/apeiron/layers/: _layers_11_to_17.py  _seventeen_layers_framework.py  apeiron_cifar10_log.txt  apeiron_cifar10_table.tex  apeiron_digits_log.txt  apeiron_fashion_log.txt  apeiron_fashion_table.tex  apeiron_kmnist_log.txt  apeiron_kmnist_table.tex  baseline_output.txt  baseline_table.tex  baseline_table_full.tex  baselines_extra_table.tex  baselines_fashion_kmnist_log.txt  baselines_mnist_cifar10_log.txt  baselines_mnist_cifar10_table.tex  comparison_table_digits.tex  debug_log.txt
Apeiron/apeiron/optional/: __init__.py  code_genesis.py  (+24 more)
(+566 files in other folders)
